# wasm-component-problem

./: Cargo.toml  README.md
components/cli/: Cargo.toml
components/cli/src/: bindings.rs  main.rs
components/cli/wit/: cli.wit
components/parser/: Cargo.toml
components/parser/src/: bindings.rs  lib.rs
components/parser/wit/: parser.wit
components/types/wit/: types.wit
