[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.20.0"

[package.metadata.component]
package = "example:cli"

[package.metadata.component.dependencies]
"example:parser" = { path = "../../target/wasm32-wasi/debug/parser.wasm" }

[package.metadata.component.target.dependencies]
"example:types" = { path = "../types/wit" }
